Corex in iso_cmdline function

--- a/scripts/startvm.in
+++ b/scripts/startvm.in
@@ -48,7 +48,7 @@ esac
 }
 
 iso_disk_cmdline() {
-case $BIOS_TYPE_INFO in
+case $ISO_FILE in
         no|NO|none|NONE)
                 _ISO_CMDLINE=""
         ;;
