Add somme additional hdds

--- a/scripts/startvm.in
+++ b/scripts/startvm.in
@@ -35,6 +35,22 @@ check_hdd1_file() {
 [[ ! -f $HDD1_NAME ]] &&  _error "le disque dur de la VM n'existe pas, veuillez utiliser le script persokvm pour le créer"
 }
 
+check_hdd2() {
+if [[ -n $HDD2_NAME ]]
+	then
+		ADD_HDD2="-drive file=${HDD2_NAME},if=${HDD2_CONTROLLER_TYPE}"
+		[[ ! -f $HDD2_NAME ]] &&  _error "Le second disque dur de la VM n'existe pas"
+fi
+}
+
+check_hdd3() {
+if [[ -n $HDD2_NAME ]]
+        then
+		ADD_HDD3="-drive file=${HDD3_NAME},if=${HDD3_CONTROLLER_TYPE}"
+		[[ ! -f $HDD3_NAME ]] &&  _error "le troisième disque dur de la VM n'existe pas"
+fi
+}
+
 uefi_bioscmdline() {
 case $BIOS_TYPE_INFO in
 	uefi|UEFI)
@@ -49,7 +65,7 @@ esac
 
 iso_disk_cmdline() {
 case $ISO_FILE in
-        no|NO|none|NONE)
+        no|NO|none|NONE|'')
                 _ISO_CMDLINE=""
         ;;
         *)
@@ -122,6 +138,8 @@ cat << EOF
 ${_UEFI_CODE_CMDLINE}
 ${_UEFI_VAR_CMDLINE}
 -drive file=$HDD1_NAME,if=$HDD1_CONTROLLER_TYPE
+${ADD_HDD2}
+${ADD_HDD3}
 ${_ISO_CMDLINE}
 -boot menu=on
 ${_VGA_CMDLINE}
@@ -139,7 +157,9 @@ $QEMU_BIN -enable-kvm -M q35 -m $SYSTEM_MEMORY_SIZE -cpu $CPU_TYPE -smp cores=$N
           -device $NETWORK_HARDWARE_TYPE,netdev=net0 -netdev $NETWORK_TYPE,id=net0 \
           -device virtio-balloon \
           ${_UEFI_CODE_CMDLINE} ${_UEFI_VAR_CMDLINE} \
-          -drive file=$HDD1_NAME,if=$HDD1_CONTROLLER_TYPE \
+          -drive file=${HDD1_NAME},if=${HDD1_CONTROLLER_TYPE} \
+          ${ADD_HDD2} \
+          ${ADD_HDD3} \
           ${_ISO_CMDLINE} \
           -boot menu=on  \
           ${_VGA_CMDLINE} \
@@ -155,6 +175,8 @@ $QEMU_BIN -enable-kvm -M q35 -m $SYSTEM_MEMORY_SIZE -cpu $CPU_TYPE -smp cores=$N
 main() {
 check_var_file
 check_hdd1_file
+check_hdd2
+check_hdd3
 uefi_bioscmdline
 iso_disk_cmdline
 sndhw_cmdline
