Add a directory destination to git clone

--- a/scripts/make-iso-nutyx.in
+++ b/scripts/make-iso-nutyx.in
@@ -173,7 +173,7 @@ export LFS=${BUILD_ISOFOLDER}
 
 if [[ ! -d $GIT_FOLDER ]]
 	then
-		git clone $GIT_URL || error "Can not do git clone $GIT_URL"
+		git clone $GIT_URL $GIT_FOLDER || error "Can not do git clone $GIT_URL"
 	else
 		pushd $GIT_FOLDER
 		git pull || error "Can not do git pull in $GITFOLDER"
